#23 Fix product structure scrollbars

--- a/docdoku-server/docdoku-server-web/src/main/webapp/css/product-structure.css
+++ b/docdoku-server/docdoku-server-web/src/main/webapp/css/product-structure.css
@@ -7,14 +7,6 @@ html{
   height: 100%;
 }
 
-/*.container{
-    position: relative;
-    background-color: #F5F5F5;
-    overflow: hidden;
-    margin-left: 0px;
-    width: 295px;
-}      */
-
 .container-fluid{
   padding-right: 0px;
   padding-left: 0px;
@@ -22,7 +14,7 @@ html{
 }
 
 .row-fluid{
-  height: 100%;
+  height: 99.7%;
   top: -2px;
   position: absolute;
 }
@@ -129,7 +121,6 @@ html{
 
 .well{
   border: 1px solid #CFD7E4;
-  /*TODO get left container height*/
   height: 100%;
   padding: 0px;
   margin-bottom: 0px;
@@ -156,8 +147,17 @@ html{
   background-image: -webkit-linear-gradient(left , transparent 2%, #CFD7E4 3%);
 }
 
+#product_nav_list a{
+    display:inline-block;
+    cursor:pointer;
+}
+
 #product_nav_list a:hover {
    text-decoration: none;
+}
+
+#product_nav_list a .checkbox{
+    padding-left:5px;
 }
 
 #product_nav_list label:hover {
@@ -209,10 +209,6 @@ margin-right:0px;
 }
 
 #container {
-/*  width: 66%;
-  position: absolute;
-  right: 0px;
-  margin-right: 120px;*/
   margin-top: 20px;
   height: 80%;
   border: 1px black dotted;
