--- a/docdoku-server/docdoku-server-web/src/main/webapp/less/product-structure/style.less
+++ b/docdoku-server/docdoku-server-web/src/main/webapp/less/product-structure/style.less
@@ -51,22 +51,26 @@
     position: relative;
 }
 
+.row-fluid{
+    width: 99.6%;
+}
+
 #search_control_container input[type="search"] {
     -webkit-appearance: none;
 }
 
 #part_metadata_container{
-    //background-image: -webkit-linear-gradient(top, #7A99C1,#2C4361);
     border-top: 3px solid #768AA8;
-    padding-left: 3.5%;
-    left: -3.5%;
-    width: 100%;
-    bottom: 0px;
-    position: absolute;
     background-color: #96AAC6;
-    height: 20%;
-    display: block;
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    left: -3.5%;
+    bottom: -3px;
     padding-top: 5px;
+    padding-left: 3.9%;
+    display: none;
+
 }
 
 #part_metadata_container h1{
